--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         body {
             padding-top: 50px;
         }
+
         li {
             list-style-type: none;
         }
@@ -31,32 +32,40 @@
         .navbar-brand {
             padding: 10px 20px;
         }
-        .panel-default>.panel-heading {
+
+        .panel-default > .panel-heading {
             background-color: #fff;
             color: #0a8cd2;
         }
-        .panel-default>.panel-heading:hover {
+
+        .panel-default > .panel-heading:hover {
             background-color: #0a8cd2;
             color: #ffffff;
         }
-        .panel-default>.panel-collapse>.panel-body li {
+
+        .panel-default > .panel-collapse > .panel-body li {
             display: block;
-            line-height:40px;
+            line-height: 40px;
         }
-        .panel-default>.panel-collapse>.panel-body li:hover {
+
+        .panel-default > .panel-collapse > .panel-body li:hover {
             background-color: #0a8cd2;
         }
-        .panel-default>.panel-collapse>.panel-body li:hover a{
+
+        .panel-default > .panel-collapse > .panel-body li:hover a {
             color: #ffffff;
         }
+
         .panel-default a {
             text-decoration: none;
         }
+
         .panel-body {
-            padding:0;
+            padding: 0;
         }
+
         .panel-body ul {
-            padding-left:0;
+            padding-left: 0;
         }
 
         .carousel {
@@ -196,8 +205,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">实例 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#tab-1st">第一章</a></li>
-                        <li><a href="#tab-2nd">第二章</a></li>
+                        <li><a href="#collapseOne">第一章</a></li>
+                        <li><a href="#collapseTwo">第二章</a></li>
                         <li><a href="#tab-3rd">第三章</a></li>
                         <li class="divider"></li>
                         <li><a href="#tab-4th">第四章</a></li>
@@ -315,12 +324,12 @@
                     <div id="collapseOne" class="panel-collapse collapse">
                         <div class="panel-body">
                             <ul>
-                                <li><a href="./demo/d1/1/" target="_blank">1</a></li>
-                                <li><a href="./demo/d1/2/" target="_blank">2</a></li>
-                                <li><a href="./demo/d1/3/" target="_blank">1</a></li>
-                                <li><a href="./demo/d1/4/" target="_blank">2</a></li>
-                                <li><a href="./demo/d1/5/" target="_blank">1</a></li>
-                                <li><a href="./demo/d1/6/" target="_blank">2</a></li>
+                                <li><a href="./demo/d1/1/" target="_blank">字符串操作</a></li>
+                                <li><a href="./demo/d1/2/" target="_blank">点击复制文本框内容</a></li>
+                                <li><a href="./demo/d1/3/" target="_blank">判断用户是否输入</a></li>
+                                <li><a href="./demo/d1/4/" target="_blank">限制输入内容</a></li>
+                                <li><a href="./demo/d1/5/" target="_blank">限制输入字符长度</a></li>
+                                <li><a href="./demo/d1/6/" target="_blank">评论框剩余字数</a></li>
                             </ul>
                         </div>
                     </div>
@@ -334,12 +343,13 @@
                     <div id="collapseTwo" class="panel-collapse collapse">
                         <div class="panel-body">
                             <ul>
-                                <li><a href="./demo/d2/1/" target="_blank">1</a></li>
-                                <li><a href="./demo/d2/2/" target="_blank">2</a></li>
-                                <li><a href="./demo/d2/3/" target="_blank">1</a></li>
-                                <li><a href="./demo/d2/4/" target="_blank">2</a></li>
-                                <li><a href="./demo/d2/5/" target="_blank">1</a></li>
-                                <li><a href="./demo/d2/6/" target="_blank">2</a></li>
+                                <li><a href="./demo/d2/1/" target="_blank">ToolTip效果</a></li>
+                                <li><a href="./demo/d2/2/" target="_blank">ToolTip效果2</a></li>
+                                <li><a href="./demo/d2/3/" target="_blank">网页换肤</a></li>
+                                <li><a href="./demo/d2/4/" target="_blank">鼠标移入移出改变透明度</a></li>
+                                <li><a href="./demo/d2/5/" target="_blank">计算数组中数字的和</a></li>
+                                <li><a href="./demo/d2/6/" target="_blank">简易网页时钟</a></li>
+                                <li><a href="./demo/d2/7/" target="_blank">高考倒计时</a></li>
                             </ul>
                         </div>
                     </div>
@@ -353,12 +363,13 @@
                     <div id="collapseThree" class="panel-collapse collapse">
                         <div class="panel-body">
                             <ul>
-                                <li><a href="./demo/d3/1/" target="_blank">1</a></li>
-                                <li><a href="./demo/d3/2/" target="_blank">2</a></li>
-                                <li><a href="./demo/d3/3/" target="_blank">1</a></li>
-                                <li><a href="./demo/d3/4/" target="_blank">2</a></li>
-                                <li><a href="./demo/d3/5/" target="_blank">1</a></li>
-                                <li><a href="./demo/d3/6/" target="_blank">2</a></li>
+                                <li><a href="./demo/d3/1/" target="_blank">弹出层效果</a></li>
+                                <li><a href="./demo/d3/2/" target="_blank">选项卡</a></li>
+                                <li><a href="./demo/d3/3/" target="_blank">全选/取消</a></li>
+                                <li><a href="./demo/d3/4/" target="_blank">比较数字大小</a></li>
+                                <li><a href="./demo/d3/5/" target="_blank">判断数字位数</a></li>
+                                <li><a href="./demo/d3/6/" target="_blank">点击显示单击坐标</a></li>
+                                <li><a href="./demo/d3/7/" target="_blank">仿京东导航栏</a></li>
                             </ul>
                         </div>
                     </div>
@@ -372,12 +383,12 @@
                     <div id="collapseFour" class="panel-collapse collapse">
                         <div class="panel-body">
                             <ul>
-                                <li><a href="./demo/d4/1/" target="_blank">1</a></li>
-                                <li><a href="./demo/d4/2/" target="_blank">2</a></li>
-                                <li><a href="./demo/d4/31/" target="_blank">1</a></li>
-                                <li><a href="./demo/d4/4/" target="_blank">2</a></li>
-                                <li><a href="./demo/d4/5/" target="_blank">1</a></li>
-                                <li><a href="./demo/d4/6/" target="_blank">2</a></li>
+                                <li><a href="./demo/d4/1/" target="_blank">阻止右键点击</a></li>
+                                <li><a href="./demo/d4/2/" target="_blank">自定义右键菜单</a></li>
+                                <li><a href="./demo/d4/3/" target="_blank">导航栏</a></li>
+                                <li><a href="./demo/d4/4/" target="_blank">返回顶部（缓冲）</a></li>
+                                <li><a href="./demo/d4/5/" target="_blank">右下角广告</a></li>
+                                <li><a href="./demo/d4/6/" target="_blank">固定边栏</a></li>
                             </ul>
                         </div>
                     </div>
@@ -403,111 +414,10 @@
                 </div>
             </div>
         </div>
-        <ul class="nav nav-tabs" role="tablist" id="tab-list">
-            <li class="active"><a href="#tab-1st" role="tab" data-toggle="tab">第一章</a></li>
-            <li><a href="#tab-2nd" role="tab" data-toggle="tab">第二章</a></li>
-            <li><a href="#tab-3rd" role="tab" data-toggle="tab">第三章</a></li>
-            <li><a href="#tab-4th" role="tab" data-toggle="tab">第四章</a></li>
-            <li><a href="#tab-5th" role="tab" data-toggle="tab">第五章</a></li>
-        </ul>
-        <div class="tab-content">
-            <div class="tab-pane active" id="tab-1st" role="tabpanel">
-                <div class="row feature">
-                    <div class="col-md-7">
-                        <h2 class="feature-heading" class="feature">Chrome</h2>
-                        <p class="lead">Google Chrome is a freeware web browser developed by Google. It was first
-                            released
-                            in 2008, for Microsoft Windows, and was later ported to Linux, macOS, iOS and Android.
-                        </p>
-                    </div>
-                    <div class="col-md-5">
-                        <img src="images/chrome-m.png" alt="Chrome" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-2nd" role="tabpanel">
 
-                <div class="row feature">
-                    <div class="col-md-5">
-                        <h2 class="feature-heading">Firefox</h2>
-                        <p class="lead">Firefox is available for Windows, macOS and Linux operating systems, with its
-                            Firefox for Android available for Android (formerly Firefox for mobile, it also ran on the
-                            discontinued Firefox OS).</p>
-                    </div>
-                    <div class="col-md-7">
-                        <img src="images/firefox-m.png" alt="Firefox" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-3rd" role="tabpanel">
-
-                <div class="row feature">
-                    <div class="col-md-7">
-                        <h2 class="feature-heading">Internet Explorer</h2>
-                        <p class="lead">Internet Explorer is a discontinued series of graphical web browsers developed
-                            by
-                            Microsoft and included as part of the Microsoft Windows line of operating systems, starting
-                            in
-                            1995.</p>
-                    </div>
-                    <div class="col-md-5">
-                        <img src="images/ie-m.png" alt="IE" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-4th" role="tabpanel">
-
-                <div class="row feature">
-                    <div class="col-md-5">
-                        <h2 class="feature-heading">Opera</h2>
-                        <p class="lead">Opera is a web browser for Windows, macOS, and Linux operating systems. It is
-                            developed by Opera Software.</p>
-                    </div>
-                    <div class="col-md-7">
-                        <img src="images/opera-m.png" alt="Opera" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-5th" role="tabpanel">
-
-                <div class="row feature">
-                    <div class="col-md-7">
-                        <h2 class="feature-heading">Safari</h2>
-                        <p class="lead">Safari is a web browser developed by Apple based on the WebKit engine. First
-                            released in 2003 with Mac OS X Panther, a mobile version has been included in iOS devices
-                            since
-                            the introduction of the iPhone in 2007.</p>
-                    </div>
-                    <div class="col-md-5">
-                        <img src="images/safari-m.png" alt="Safari" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr class="divider">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="images/chrome-logo.png" alt="">
-                <h1>Chrome</h1>
-                <p>A fast, secure, and free web browser built for the modern web.</p>
-                <p><a href="#" class="btn btn-default" target="_blank" role="button">Download</a></p>
-            </div>
-            <div class="col-md-4">
-                <img src="images/firefox-logo.png" alt="">
-                <h1>Firefox</h1>
-                <p>Mozilla Firefox is a free and open-source web browser developed by the Mozilla Foundation.</p>
-                <p><a href="#" class="btn btn-default" target="_blank" role="button">Download</a></p>
-            </div>
-            <div class="col-md-4">
-                <img src="images/opera-logo.png" alt="">
-                <h1>Opera</h1>
-                <p>Opera is a fast and secure browser. Developed in Europe, used by millions around the world.</p>
-                <p><a href="#" class="btn btn-default" target="_blank" role="button">Download</a></p>
-            </div>
-        </div>
         <hr class="divider">
         <footer>
-            <p class="pull-left">Copyright &copy; 2016</p>
+            <p class="pull-left">Copyright &copy; 2017</p>
             <p class="pull-right"><a href="#top">Top</a></p>
         </footer>
     </div>
@@ -535,19 +445,21 @@
             </div>
         </div>
     </div>
+</div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/picturefill.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("#navbar-list .dropdown-menu a").on('click', function () {
-                var href = $(this).attr("href");
-                $("#tab-list a[href='" + href + "']").tab("show");
-            });
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery-1.11.1.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+<script src="js/picturefill.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#navbar-list .dropdown-menu a").on('click', function () {
+            var href = $(this).attr("href");
+            $("#tab-list a[href='" + href + "']").collapse("show");
+//            $("#accordion a[href = '"+ href+"']").collapse('show');
         });
-    </script>
+    });
+</script>
 </body>
 </html>
